--- a/course/Applications/first-app/Footer/Footer.css
+++ b/course/Applications/first-app/Footer/Footer.css
@@ -1,4 +1,8 @@
 .foot{
     position: fixed;
-    
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: cadetblue;
+    text-align: center;
 }
