--- a/course/Applications/first-app/Menu/Menu.css
+++ b/course/Applications/first-app/Menu/Menu.css
@@ -1,13 +1,12 @@
 .menu{
     list-style-type: none;
     background-color: cadetblue;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0;
     margin: 0;
-    
 }
 .menu>li{
-    display: inline;
-    margin-right: 20px;
-    font-size: 20px;
-    font-weight: bold;
-    font-style: italic;
+    margin:0 10px;
+    font-family: italic;
 }
